// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Affix 1`] = `
<ds-field>
  <label for="affix">
    Hvor mange kroner koster det per måned?
  </label>
  <div>
    <span aria-hidden="true">
      NOK
    </span>
    <input
      id="affix"
      size="12"
      autocomplete="off"
      type="text"
    >
    <span aria-hidden="true">
      pr. mnd.
    </span>
  </div>
</ds-field>
`;

exports[`Counter 1`] = `
<ds-field>
  <label for="counter">
    Legg til en beskrivelse
  </label>
  <textarea
    rows="4"
    id="counter"
    autocomplete="off"
    aria-describedby="<generated>"
    style="<removed>"
  >
  </textarea>
  <p
    data-field="counter"
    data-limit="75"
    id="<generated>"
    data-label="75 tegn igjen"
    data-state="under"
  >
  </p>
</ds-field>
`;

exports[`Format 1`] = `
<ds-field>
  <label for="format">
    Fødselsnummer
  </label>
  <input
    id="format"
    inputmode="numeric"
    autocomplete="off"
    type="text"
  >
</ds-field>
`;

exports[`Position 1`] = `
<div style="<removed>">
  <style>
    .field-position-main {
  display: flex;
  flex-direction: column;
  gap: var(--ds-size-2);
}
  </style>
  <div>
    <ds-field
      data-position="end"
      data-clickdelegatefor="airplane"
    >
      <label for="airplane">
        Flymodus
      </label>
      <input
        role="switch"
        id="airplane"
        type="checkbox"
      >
    </ds-field>
    <ds-field
      data-position="end"
      data-clickdelegatefor="sounds"
    >
      <label for="sounds">
        Lydløs
      </label>
      <input
        role="switch"
        id="sounds"
        type="checkbox"
      >
    </ds-field>
  </div>
</div>
`;

exports[`Preview 1`] = `
<ds-field>
  <label for="preview">
    E-post
  </label>
  <div
    data-field="description"
    id="<generated>"
  >
    E-posten din brukes til å logge inn og motta varsler
  </div>
  <input
    id="preview"
    autocomplete="email"
    aria-invalid="true"
    type="text"
    value="ola nordmann@udir.no"
    aria-describedby="<generated> <generated>"
  >
  <p
    data-field="validation"
    id="<generated>"
  >
    Du må oppgi en gyldig e-postadresse
  </p>
</ds-field>
`;
